--- a/lecture01.ipynb
+++ b/lecture01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJtjMgyhddlSI12GVRKzoW",
+      "authorship_tag": "ABX9TyMdE3EIr296PtwZuGZ3xDRk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pj7Kbn_CH4H_",
-        "outputId": "ef94f66a-2a6c-4f83-d156-954b55b09eda"
+        "outputId": "af256ced-ebd5-444b-c5a7-f64e5e64cbdb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello\n",
+            "number if more than 0\n",
             "30\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello\")\n",
+        "#print(\"hello\")\n",
         "\n",
         "number01 = 10\n",
         "number02 = 20\n",
         "\n",
-        "print(number01+number02)"
+        "\n",
+        "if number01 >= 0:\n",
+        "  print(\"number if more than 0\")\n",
+        "\n",
+        "total = number01+number02\n",
+        "print(total)\n",
+        "\n"
       ]
     }
   ]
